ncc/testsuite/positive/Issue-0814-3.n
public interface IA['t]
{
  GetValue() : 't;
}

public class A : IA[int], IA[ushort]
{
  GetIntValue() : int implements IA[int].GetValue
  {
    1
  }

  GetUShortValue() : ushort implements IA[ushort].GetValue
  {
    100 : ushort
  }
}

public class M
{
  public static Main() : void
  {
    def i = A() : IA[int];
    def u = A() : IA[ushort];
    System.Console.WriteLine(i.GetValue() + u.GetValue());
  }
}


/*
BEGIN-OUTPUT
101
END-OUTPUT
*/