ncc/testsuite/negative/co-contravariant-native.n


interface IBuggy [+P, -M] {
  Get (i : int) : M; // E: cannot use contravariant
  IsEmpty : M { get; }; // E: cannot use contravariant
  
  Set (x : P) : void; // E: cannot use covariant
}

